force-app/main/default/objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <description>Physical location of an event. Availability is maintained by VenueStatusHelper.</description>
    <label>Venue</label>
    <labelPlural>Venues</labelPlural>
    <nameField>
        <label>Venue Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>