force-app/main/default/objects/Venue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>Available</defaultValue>
    <description>Maintained automatically: Booked while a confirmed event uses the venue, Available otherwise.</description>
    <label>Status</label>
    <picklistValues>
        <picklistValue>Available</picklistValue>
        <picklistValue>Booked</picklistValue>
        <picklistValue>Under Maintenance</picklistValue>
    </picklistValues>
    <type>Picklist</type>
</CustomField>