force-app/main/default/objects/Venue__c/validationRules/Capacity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>A venue must be able to host at least one person.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Capacity__c)), Capacity__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>Venue__c.Capacity__c</errorDisplayField>
    <errorMessage>The capacity of a venue must be at least 1.</errorMessage>
    <fullName>Capacity_Must_Be_Positive</fullName>
</ValidationRule>